--- a/pod.yml
+++ b/pod.yml
@@ -1,4 +1,15 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mypvc1
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
 
+---
 apiVersion: v1
 kind: Pod
 metadata:
