--- a/pod.yml
+++ b/pod.yml
@@ -33,14 +33,18 @@ spec:
           ports:
             - containerPort: 80
           volumeMounts:
-            - mountPath: "/var/www/html"
+            - mountPath: "/usr/local/apache2/"
               name: pv-storage
+            - mountPath: "/usr/local/apache2/htdocs"
+              name: ref-storage
         volumes:
            - name: pv-storage
              persistentVolumeClaim:
                 claimName: mypvc1
-  
-     
+           - name: ref-storage
+             hostPath:
+                path: /data
+             
   
 
 
